--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -265,9 +265,9 @@ display: flex;
   height: 350px;
 }
 
-#carousel {
+.carousel {
 position: relative;
-height:300px; padding-top: 25px;  background-color: #77ABA5; margin-left: -10px; margin-right: -10px;
+height:300px; padding-top: 25px;  background-color: #77ABA5; margin-left: -8px; padding-left: 8px; margin-right: -10px;
 }
 
 img {
@@ -376,13 +376,13 @@ margin-top: -50px;
 }
 @media screen and (max-width: 760px) {
   #foot1 {
-    width: 60%;
+    width: 80%;
     text-align: center;
     display: block;
 margin-top: 180px;
     text-align: center;
     margin-bottom: 30px;
-    font-size: 20px;
+    font-size: 16px;
   }
 
   #navbar {
@@ -393,7 +393,7 @@ margin-left: -200px;
   }
   
   #foot2 {
-    width:40%;display:flex; justify-content: space-around;
+    width:60%;display:flex; justify-content: space-around;
     text-align: center;
     align-items: center;
 
@@ -403,19 +403,40 @@ margin-left: -200px;
  
     margin-left: 0px;
   }
+
+  #foot2 img {
+    width: 30px;
+  }
   
   #foot3 {
     width: 100%; text-align: center;
-    font-size: 20px;
+    font-size: 16px;
   }
 
   #footer {
-     display: flex; flex-direction: column; justify-content: center; line-height: 30px; padding-bottom: 250px;
+     display: flex; flex-direction: column; justify-content: center; line-height: 30px; padding-bottom: 230px;
+     padding-left: 90px;
   }
+}
+#c2 {
+  display: none;
 }
 
 @media screen and (max-width: 400px) {
   #navbar {
     width: 104vw;
+  }
+}
+
+@media screen and (max-width: 770px) {
+
+  #c1 {
+    display: none;
+  }
+
+
+  #c2 {
+    display: block;
+    margin-top: -165px;
   }
   }
