--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -36,6 +36,42 @@
 
 <div [ngClass]="{ 'show2': navbarOpen }">
 
+
+
+  <div id="inst">
+
+    <!-- <div style="margin: 0 50px;" data-mc-src="4737b088-8caa-4e27-9e81-467a15789ba4#instagram"></div>
+        
+<script 
+  src="https://cdn2.woxo.tech/a.js#62c01a09fbe6f799a42fc740" 
+  async data-usrc>
+</script> -->
+    <div  style="margin: 0 50px;" class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a
+        class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/"
+        target="_blank" title="Widget by EmbedSocial"><span></span></a></div>
+    <script>
+      (function (d, s, id) {
+        var js;
+        if (d.getElementById(id)) {
+          return;
+        }
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://embedsocial.com/cdn/ht.js";
+        d.getElementsByTagName("head")[0].appendChild(js);
+      }(document, "script", "EmbedSocialHashtagScript"));
+
+    </script>
+    <br>
+    <div style="text-align:center; margin-top: -30px; margin-bottom: 50px;"> <button id="reg_button"><a
+          href="https://www.instagram.com/dr.oleksandr_kostenko">INSTAGRAM <img width="20px" style="margin-top: 3px"
+            src="./assets/images/Instagram.png" alt=""></a></button></div>
+  </div>
+  <div id="reg_online_div" class="commm">
+
+    <span id="reg_online">Дуже дякуємо лікарю Олександру Костенку за його професійний підхід до роботи. Завдяки його професіоналізму у моєї доньки тепер рівні зуби. І термін, і результат перевершив всі наші очікування</span>
+    <br><span id="reg_online_2" style="display: inline-block; margin: 20px 50px 0 50px; opacity: 0.5">— Любов Олійник</span>
+  </div>
   <div class="carousel" id="c1">
 
     <carousel [cellsToShow]=3 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]="true" [loop]="true"
@@ -211,7 +247,7 @@
     </carousel>
   </div>
 
-  <div id="reg_online_div">
+  <div id="reg_online_div" class="l">
 
     <span id="reg_online">Обирайте зручний час та самостійно записуйтесь на консультацію! 🚀</span>
     <br><button id="reg_button"><a href="https://calendly.com/dr_kostenko">ЗАПИСАТИСЬ</a></button>
@@ -220,35 +256,6 @@
 
 
 
-  <div>
-
-    <!-- <div style="margin: 0 50px;" data-mc-src="4737b088-8caa-4e27-9e81-467a15789ba4#instagram"></div>
-        
-<script 
-  src="https://cdn2.woxo.tech/a.js#62c01a09fbe6f799a42fc740" 
-  async data-usrc>
-</script> -->
-    <div style="margin: 0 50px;" class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a
-        class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/"
-        target="_blank" title="Widget by EmbedSocial"><span></span></a></div>
-    <script>
-      (function (d, s, id) {
-        var js;
-        if (d.getElementById(id)) {
-          return;
-        }
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://embedsocial.com/cdn/ht.js";
-        d.getElementsByTagName("head")[0].appendChild(js);
-      }(document, "script", "EmbedSocialHashtagScript"));
-
-    </script>
-    <br>
-    <div style="text-align:center; margin-top: -30px;"> <button id="reg_button"><a
-          href="https://www.instagram.com/dr.oleksandr_kostenko">INSTAGRAM <img width="20px" style="margin-top: 3px"
-            src="./assets/images/Instagram.png" alt=""></a></button></div>
-  </div>
   <!-- <div
   loading="lazy"
   data-mc-src="06a41f44-a7eb-4db7-a684-a06e5aa2c451#null"></div>
@@ -257,14 +264,10 @@
   src="https://cdn2.woxo.tech/a.js#62c01a09fbe6f799a42fc740" 
   async data-usrc>
 </script> -->
-  <div id="reg_online_div">
 
-    <span id="reg_online">Дуже дякуємо лікарю Олександру Костенку за його професійний підхід до роботи. Завдяки його професіоналізму у моєї доньки тепер рівні зуби. І термін, і результат перевершив всі наші очікування</span>
-    <br><span id="reg_online_2" style="display: inline-block; margin: 20px 50px 0 50px; opacity: 0.5">— Любов Олійник</span>
-  </div>
   <script defer src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
-  <div style="display: flex; flex-direction:column;margin: -30px 50px 20px 50px">
+  <div id="comp" style="display: flex; flex-direction:column;margin: -30px 50px 20px 50px">
     <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;  ">
       <div style="text-align: center">
         <img-comparison-slider class="img-comparison-slider1" style="width: 88%;">
