--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -198,11 +198,17 @@ background-color: #77ABA5;
 
 
 @media screen and (max-width: 770px) {
+
+  .commm{
+    padding-top: 0px;
+    padding-bottom: 220px;
+  }
+
   #carousel {
     margin-top: -165px;
   }
   .show2{
-   visibility: hidden;
+ display: none;
   }
 
 
@@ -267,7 +273,7 @@ display: flex;
 
 .carousel {
 position: relative;
-height:300px; padding-top: 25px;  background-color: #77ABA5; margin-left: -8px; padding-left: 8px; margin-right: -10px;
+height:300px; padding-top: 15px;  background-color: #77ABA5; margin-left: -8px; padding-left: 8px; margin-right: -10px;
 }
 
 img {
@@ -375,6 +381,18 @@ margin-top: -50px;
 }
 }
 @media screen and (max-width: 760px) {
+#reg_online_div {
+  margin-bottom:0px;
+}
+  #inst{
+    margin-top: -150px;
+
+  }
+
+  #comp {
+    padding-top: 30px;
+  }
+
   #foot1 {
     width: 80%;
     text-align: center;
@@ -407,7 +425,9 @@ margin-left: -200px;
   #foot2 img {
     width: 30px;
   }
-  
+  .carousel {
+padding-top: 17px;
+  }
   #foot3 {
     width: 100%; text-align: center;
     font-size: 16px;
