--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -305,6 +305,13 @@
   <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-ab9259c4-0a2d-4d08-9e27-c32abcb2167e"></div> -->
   <!-- <div class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script> -->
+  <div id="reg_online_div" class="l" style="margin-top: -20px;">
+  <span id="reg_online">Як нас знайти?</span>
+  </div>
+  <div id="iframe">
+
+  <div  class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=%D1%81%D1%82%D0%BE%D0%BC%D0%B0%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%8F%20white%20%D1%83%D0%B6%D0%B3&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">embedded google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+</div>
 
 <footer id="footer">
 <span id="foot1">вулиця Минайська, 35А, Ужгород, Закарпатська область, 88000</span>
