--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,24 +14,24 @@
 
 <div id="navbar">
 
-  <span><img id="logo" src="./assets/images/logo.PNG" alt=""></span>
+  <span><a href=""><img id="logo" src="./assets/images/logo.PNG" alt=""></a></span>
   <div id="logo1"><img src="./assets/images/logo.PNG" alt=""></div>
-  <span id="adv">ГОЛОВНА</span>
-  <span>НАШІ ПЕРЕВАГИ</span>
-  <span>НАШІ БРЕКЕТИ</span>
-  <span>ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</span>
-  <span>ГАЛЕРЕЯ</span>
+  <span id="adv"> <a href="">ГОЛОВНА</a></span>
+  <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
+  <span> <a href="">НАШІ БРЕКЕТИ</a></span>
+  <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="">ГАЛЕРЕЯ</a></span>
 
   <div (click)="toggleNavbar()" id="nav_butt"><img src="./assets/images/Menu Icon.png" alt=""></div>
 </div>
 
 
 <div id="mob_menu" [ngClass]="{ 'show': navbarOpen }">
-  <span>ГОЛОВНА</span>
-  <span>НАШІ ПЕРЕВАГИ</span>
-  <span>НАШІ БРЕКЕТИ</span>
-  <span>ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</span>
-  <span>ГАЛЕРЕЯ</span>
+  <span > <a href="">ГОЛОВНА</a></span>
+  <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
+  <span> <a href="">НАШІ БРЕКЕТИ</a></span>
+  <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="">ГАЛЕРЕЯ</a></span>
 </div>
 
 <div [ngClass]="{ 'show2': navbarOpen }">
