--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -46,7 +46,7 @@
   src="https://cdn2.woxo.tech/a.js#62c01a09fbe6f799a42fc740" 
   async data-usrc>
 </script> -->
-    <div  style="margin: 0 50px;" class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a
+    <div  id="inns" class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a
         class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/"
         target="_blank" title="Widget by EmbedSocial"><span></span></a></div>
     <script>
@@ -267,7 +267,7 @@
 
   <script defer src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
-  <div id="comp" style="display: flex; flex-direction:column;margin: -30px 50px 20px 50px">
+  <div id="comp" >
     <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;  ">
       <div style="text-align: center">
         <img-comparison-slider class="img-comparison-slider1" style="width: 88%;">
