--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
   <div id="logo1"><img src="./assets/images/logo.PNG" alt=""></div>
   <span id="adv"> <a href="">ГОЛОВНА</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
-  <span> <a href="">НАШІ БРЕКЕТИ</a></span>
+  <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
   <span> <a href="">ГАЛЕРЕЯ</a></span>
 
@@ -29,7 +29,7 @@
 <div id="mob_menu" [ngClass]="{ 'show': navbarOpen }">
   <span > <a href="">ГОЛОВНА</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
-  <span> <a href="">НАШІ БРЕКЕТИ</a></span>
+  <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
   <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
   <span> <a href="">ГАЛЕРЕЯ</a></span>
 </div>
