--- a/src/app/advantages/advantages.component.html
+++ b/src/app/advantages/advantages.component.html
@@ -19,8 +19,8 @@
   <span id="adv"> <a href="">ГОЛОВНА</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
-  <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
-  <span> <a href="">ГАЛЕРЕЯ</a></span>
+  <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="gallery">ГАЛЕРЕЯ</a></span>
 
   <div (click)="toggleNavbar()" id="nav_butt"><img src="./assets/images/Menu Icon.png" alt=""></div>
 </div>
@@ -30,8 +30,8 @@
   <span> <a href="">ГОЛОВНА</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
-  <span> <a href="">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
-  <span> <a href="">ГАЛЕРЕЯ</a></span>
+  <span> <a href="rules">ПРАВИЛА ДЛЯ ПАЦІЄНТІВ</a></span>
+  <span> <a href="gallery">ГАЛЕРЕЯ</a></span>
 </div>
 
 <div [ngClass]="{ 'show2': navbarOpen }">
