--- a/src/app/advantages/advantages.component.css
+++ b/src/app/advantages/advantages.component.css
@@ -542,3 +542,32 @@
 a:hover{
   color: #77ABA5;
 }
+
+@media screen and (max-width: 1100px) and (min-width: 760px) {
+  #bod {
+      margin-top: 50px;
+  }
+}
+
+#logo{
+
+  width:100px;
+  margin-top: 20px; 
+  height: 70px;
+  }
+  #logo1 img{
+  height: 80px;
+  width: 80px;
+  
+  margin-top: 20px;
+    }
+  
+  @media screen and (max-width: 1000px) {
+    #logo{
+      width:70px;
+      margin-top: 20px; 
+      height: 50px;
+      }
+  
+   
+  }
