--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -14,8 +14,8 @@
 
 <div id="navbar">
 
-  <span><a href=""><img id="logo" src="./assets/images/logo.PNG" alt=""></a></span>
-  <div id="logo1"><img src="./assets/images/logo.PNG" alt=""></div>
+  <span><a href=""><img id="logo" src="./assets/images/logo.svg" alt=""></a></span>
+  <div id="logo1"><img src="./assets/images/logo.svg" alt=""></div>
   <span id="adv"> <a href="">ГОЛОВНА</a></span>
   <span> <a href="advantages">НАШІ ПЕРЕВАГИ</a></span>
   <span> <a href="braces">НАШІ БРЕКЕТИ</a></span>
