--- a/src/app/rules/rules.component.css
+++ b/src/app/rules/rules.component.css
@@ -553,3 +553,39 @@
 a:hover{
   color: #77ABA5;
 }
+
+#logo{
+
+width:100px;
+margin-top: 20px; 
+height: 70px;
+}
+#logo1 img{
+height: 80px;
+width: 80px;
+
+margin-top: 20px;
+  }
+
+@media screen and (max-width: 1000px) {
+  #logo{
+    width:70px;
+    margin-top: 20px; 
+    height: 50px;
+    }
+
+ 
+}
+
+@media screen and (max-width: 1100px) and (min-width: 760px) {
+  #bod {
+      margin-top: 50px;
+  }
+}
+
+
+@media (max-width: 760px) {
+  #bod {
+      margin-top: -90px;
+  }
+}
