--- a/src/app/advantages/advantages.component.css
+++ b/src/app/advantages/advantages.component.css
@@ -356,6 +356,7 @@
   margin-top: -50px;
   }
   }
+  img
   
   #foot1 {
     width: 20%;
@@ -495,7 +496,7 @@
     }
 
   .advantage  img {
-        width: 300px;
+        width: 270px;
          height:180px;
     }
 
