--- a/src/app/advantages/advantages.component.html
+++ b/src/app/advantages/advantages.component.html
@@ -40,7 +40,7 @@
       ПЕРЕВАГИ</span>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
       <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-        <div> <img src="./assets/images/screen1.png" alt=""></div>
+        <div> <img src="./assets/images/IMG_1069.PNG" alt=""></div>
         <div class="txt">
           <div class="highlight">НЕПРЯМА ФІКСАЦІЯ.</div> Фіксація системи на виготовлені за відбитками гіпсові моделі
           пацієнта. Це набагато точніше та зручніше для пацієнта, бо повна фіксація одразу обох щелеп може тривати лише
@@ -53,7 +53,7 @@
     </div>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen2.png" alt=""></div>
+          <div> <img src="./assets/images/Group 3.png" alt=""></div>
           <div class="txt">
             <div class="highlight">СПЕЦІАЛЬНІ ШИРОКІ ДУГИ</div> Pitts Broad, що дозволяють створити широку посмішку за допомогою розширення зубних рядів.
           </div>
@@ -65,7 +65,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen3.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1061.JPG" alt=""></div>
           <div class="txt">
             <div class="highlight">НАКЛАДКИ</div> для роз’єднання прикусу та міорелаксації для швидшої роботи системи через виключення заклинювання «зубів об зуби».
           </div>
@@ -89,7 +89,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen5.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1064.JPG" alt=""></div>
           <div class="txt">
             <div class="highlight">МІКРО-ІМПЛАНТИ</div> – абсолютна опора для тяг, яка дозволяє вирішити навіть найскладніші випадки без видалень.
           </div>
@@ -113,7 +113,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen7.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1060.JPG" alt=""></div>
           <div class="txt">
             <div class="highlight">ЕЛАСТИКИ</div> ЕЛАСТИКИ для зміни прикусу і створення щільних міжзубних контактів.
           </div>
@@ -125,7 +125,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen8.png" alt=""></div>
+          <div> <img src="./assets/images/Group 2.png" alt=""></div>
           <div class="txt">
             <div class="highlight">Одразу ДВА види РЕТЕНЦІЇ. </div>Закріплення результату одночасно як незнімним ретейнером, так і спеціальними капами.
 
