--- a/src/app/braces/braces.component.html
+++ b/src/app/braces/braces.component.html
@@ -39,7 +39,7 @@
     <span style="text-align: center; display: inline-block; margin-bottom: 50px; font-size: 26px; color: #262626">ВИДИ БРЕКЕТІВ, ЯКІ МИ ПРОПОНУЄМО</span>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
       <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-        <div> <img src="./assets/images/screen9.png" alt=""></div>
+        <div> <img src="./assets/images/IMG_1065.JPG" alt=""></div>
         <div class="txt">
           <div class="highlight">МЕТАЛЕВІ САМОЛІГАТУРНІ AMERICAN ORTHODONTICS/JC (США)</div>брекети без резинок із замочками. Лікування — швидше, відвідування — рідші
         </div>
@@ -50,7 +50,7 @@
     </div>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen10.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1073.JPG" alt=""></div>
           <div class="txt">
             <div class="highlight">РОДІЄВІ САМОЛІГАТУРНІ
                 AMERICAN ORTHODONTICS/JC (США)</div>ідентичні з попередніми, але із світлим напиленням
@@ -63,7 +63,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen11.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1074.JPEG" alt=""></div>
           <div class="txt">
             <div class="highlight">МЕТАЛЕВІ САМОЛІГАТУРНІ MICO ONE DAMON</div>без резинок, із замочками.
           </div>
@@ -75,7 +75,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen12.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1076.JPEG" alt=""></div>
           <div class="txt">
             <div class="highlight">МЕТАЛЕВІ САМОЛІГАТУРНІ ORTHOCLASSIC H4 (США)</div>без резинок, з ззамочками. Усі переваги попередніх + відоміший виробник
           </div>
@@ -88,7 +88,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen13.png" alt=""></div>
+          <div> <img src="./assets/images/IMG_1077.JPEG" alt=""></div>
           <div class="txt">
             <div class="highlight">КЕРАМІЧНІ САМОЛІГАТУРНІ AMERICAN ORTHODONTICS/JC (США)</div>сучасні брекети без резинок, із замочками. Більші за металеві, крихкіші
 
