--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -67,11 +67,11 @@
           href="https://www.instagram.com/dr.oleksandr_kostenko">INSTAGRAM <img width="20px" style="margin-top: 3px"
             src="./assets/images/Instagram.png" alt=""></a></button></div>
   </div>
-  <div id="reg_online_div" class="commm">
+  <!-- <div id="reg_online_div" class="commm">
 
     <span id="reg_online">Дуже дякуємо лікарю Олександру Костенку за його професійний підхід до роботи. Завдяки його професіоналізму у моєї доньки тепер рівні зуби. І термін, і результат перевершив всі наші очікування</span>
     <br><span id="reg_online_2" style="display: inline-block; margin: 20px 50px 0 50px; opacity: 0.5">— Любов Олійник</span>
-  </div>
+  </div> -->
   <div class="carousel" id="c1">
 
     <carousel [cellsToShow]=3 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]="true" [loop]="true"
