--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -63,18 +63,168 @@
 
     </script>
     <br>
-    <div style="text-align:center; margin-top: -30px; margin-bottom: 50px;"> <button id="reg_button"><a
+    <!-- <div style="text-align:center; margin-top: -30px; margin-bottom: 50px;"> <button id="reg_button"><a
           href="https://www.instagram.com/dr.oleksandr_kostenko">INSTAGRAM <img width="20px" style="margin-top: 3px"
-            src="./assets/images/Instagram.png" alt=""></a></button></div>
+            src="./assets/images/Instagram.png" alt=""></a></button></div> -->
+  </div>
+
+
+
+  <div id="reg_online_div" >
+
+    <span id="reg_online">Обирайте зручний час та самостійно записуйтесь на консультацію! 🚀</span>
+    <br><button id="reg_button"><a href="https://calendly.com/dr_kostenko">ЗАПИСАТИСЬ</a></button>
   </div>
   <!-- <div id="reg_online_div" class="commm">
 
     <span id="reg_online">Дуже дякуємо лікарю Олександру Костенку за його професійний підхід до роботи. Завдяки його професіоналізму у моєї доньки тепер рівні зуби. І термін, і результат перевершив всі наші очікування</span>
     <br><span id="reg_online_2" style="display: inline-block; margin: 20px 50px 0 50px; opacity: 0.5">— Любов Олійник</span>
   </div> -->
-  <div class="carousel" id="c1">
 
-    <carousel [cellsToShow]=3 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]="true" [loop]="true"
+
+  <div id="comp" style="text-align: center;" >
+
+    <span class="res">Результати</span>
+    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;  ">
+      <div style="text-align: center">
+        <img-comparison-slider class="img-comparison-slider1" style="width: 88%;">
+          <img width="100%" slot="first" src="./assets/images/5.jpg" />
+          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        </img-comparison-slider>
+      </div>
+      <div style="text-align: center;">
+        <img-comparison-slider style="width: 88%; ">
+          <img width="100%" slot="first" src="./assets/images/5.jpg" />
+          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        </img-comparison-slider>
+      </div>
+    </div>
+
+
+    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;">
+      <div style="text-align: center">
+        <img-comparison-slider id="img-comparison-slider2"  class="img-comparison-slider1" style="width: 88%;">
+          <img width="100%" slot="first" src="./assets/images/5.jpg" />
+          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        </img-comparison-slider>
+      </div>
+      <div style="text-align: center;">
+        <img-comparison-slider style="width: 88%;">
+          <img width="100%" slot="first" src="./assets/images/5.jpg" />
+          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        </img-comparison-slider>
+      </div>
+    </div>
+    <div id="Content"></div>
+  </div>
+
+  <div style="text-align: center; margin-top: -30px;" class="i">
+    <span class="res">Відгуки</span>
+    <carousel style="background-color: none; margin-top: 25px;" [cellsToShow]=1 [cellsToScroll]=1 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]=true [loop]="false"
+      [arrows]="true" [transitionTimingFunction]="'ease-in-out'" [autoplayInterval]=10000 [dots]=false
+      [transitionDuration]=600 [arrowsTheme]="'dark'">
+      <div   class="carousel-cell">
+        <img src="./assets/images/screen16.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen15.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen14.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen17.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen18.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen19.png">
+      </div>
+
+      <div   class="carousel-cell">
+        <img src="./assets/images/screen16.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen15.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen14.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen17.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen18.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen19.png">
+      </div>
+      <div   class="carousel-cell">
+        <img src="./assets/images/screen16.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen15.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen14.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen17.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen18.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen19.png">
+      </div>
+      <div   class="carousel-cell">
+        <img src="./assets/images/screen16.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen15.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen14.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen17.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen18.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen19.png">
+      </div>
+      <div   class="carousel-cell">
+        <img src="./assets/images/screen16.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen15.png">
+      </div>
+      <div class="carousel-cell" class="carousel-cell">
+        <img src="./assets/images/screen14.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen17.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen18.png">
+      </div>
+      <div class="carousel-cell">
+        <img src="./assets/images/screen19.png">
+      </div>
+
+    </carousel>
+  </div>
+
+
+
+
+
+  <!-- <div class="carousel" id="c1">
+
+    <carousel [cellsToShow]=3 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]="false" [loop]="true"
       [arrowsTheme]="'dark'" [transitionTimingFunction]="'ease-in-out'" [autoplayInterval]=4000 [dots]=false
       [transitionDuration]=600>
       <div class="carousel-cell">
@@ -245,13 +395,9 @@
       </div>
 
     </carousel>
-  </div>
+  </div> -->
 
-  <div id="reg_online_div" class="l">
 
-    <span id="reg_online">Обирайте зручний час та самостійно записуйтесь на консультацію! 🚀</span>
-    <br><button id="reg_button"><a href="https://calendly.com/dr_kostenko">ЗАПИСАТИСЬ</a></button>
-  </div>
 
 
 
@@ -267,46 +413,14 @@
 
   <script defer src="https://unpkg.com/img-comparison-slider@7/dist/index.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/img-comparison-slider@7/dist/styles.css" />
-  <div id="comp" >
-    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;  ">
-      <div style="text-align: center">
-        <img-comparison-slider class="img-comparison-slider1" style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
-        </img-comparison-slider>
-      </div>
-      <div style="text-align: center;">
-        <img-comparison-slider style="width: 88%; ">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
-        </img-comparison-slider>
-      </div>
-    </div>
-
-
-    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;">
-      <div style="text-align: center">
-        <img-comparison-slider id="img-comparison-slider2"  class="img-comparison-slider1" style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
-        </img-comparison-slider>
-      </div>
-      <div style="text-align: center;">
-        <img-comparison-slider style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
-        </img-comparison-slider>
-      </div>
-    </div>
-    <div id="Content"></div>
-  </div>
+ 
   <!-- <div class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a class="feed-powered-by-es feed-powered-by-es-feed-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script> -->
   <!-- <div data-mc-src="bff3dc11-feed-4790-a810-90a4bd3aa890#instagram"></div> -->
   <!-- <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-ab9259c4-0a2d-4d08-9e27-c32abcb2167e"></div> -->
   <!-- <div class="embedsocial-hashtag" data-ref="04bb35dee03837c1523146863760e260f3469121"><a class="feed-powered-by-es feed-powered-by-es-slider-new" href="https://embedsocial.com/social-media-aggregator/" target="_blank" title="Widget by EmbedSocial">Widget by EmbedSocial<span>→</span></a></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/cdn/ht.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialHashtagScript"));</script> -->
-  <div id="reg_online_div" class="l" style="margin-top: -20px;">
-  <span id="reg_online">Як нас знайти?</span>
+  <div id="reg_online_divv" class="l" style="margin-top: 50px;">
+  <span class="res">Як нас знайти</span>
   </div>
   <div id="iframe">
 
