--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -119,8 +119,9 @@
   </div>
 
   <div style="text-align: center; margin-top: -30px;" class="i">
-    <span class="res">Відгуки</span>
-    <carousel style="background-color: none; margin-top: 25px;" [cellsToShow]=1 [cellsToScroll]=1 [margin]=25 [height]=250  [cellWidth]=120 [autoplay]=true [loop]="false"
+    <span id="rep" class="res" >Відгуки</span>
+
+    <carousel style="background-color: none; margin-top: 25px;" [cellsToShow]=1 [cellsToScroll]=1  [height]=250  [cellWidth]=120 [autoplay]=true [loop]="false"
       [arrows]="true" [transitionTimingFunction]="'ease-in-out'" [autoplayInterval]=10000 [dots]=false
       [transitionDuration]=600 [arrowsTheme]="'dark'">
       <div   class="carousel-cell">
@@ -424,7 +425,7 @@
   </div>
   <div id="iframe">
 
-  <div  class="mapouter"><div class="gmap_canvas"><iframe id="gmap_canvas" src="https://maps.google.com/maps?q=%D1%81%D1%82%D0%BE%D0%BC%D0%B0%D1%82%D0%BE%D0%BB%D0%BE%D0%B3%D1%96%D1%8F%20white%20%D1%83%D0%B6%D0%B3&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">embedded google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Mynaiska%20St,%2035%D0%90,%20Uzhhorod,%20Zakarpattia%20Oblast,%20Ukraine,%2088000&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
 </div>
 
 <footer id="footer">
