--- a/src/app/braces/braces.component.html
+++ b/src/app/braces/braces.component.html
@@ -50,7 +50,7 @@
     </div>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: column; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/IMG_1073.JPG" alt=""></div>
+          <div> <img id="br2" src="./assets/images/IMG_1073.JPG" alt=""></div>
           <div class="txt">
             <div class="highlight">РОДІЄВІ САМОЛІГАТУРНІ
                 AMERICAN ORTHODONTICS/JC (США)</div>ідентичні з попередніми, але із світлим напиленням
