--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -82,41 +82,52 @@
   </div> -->
 
 
+
   <div id="comp" style="text-align: center;" >
 
-    <span class="res">Результати</span>
-    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;  ">
+    <span style="display: inline-block;" class="res s" id="ma">Результати</span>
+    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 20px 0px;  ">
       <div style="text-align: center">
-        <img-comparison-slider class="img-comparison-slider1" style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        <img-comparison-slider  class=" gr" >
+        <img  slot="first" src="./assets/images/IMG_1123.JPEG" />
+          <img  slot="second" src="./assets/images/IMG_1124.JPEG" />
         </img-comparison-slider>
       </div>
       <div style="text-align: center;">
-        <img-comparison-slider style="width: 88%; ">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        <img-comparison-slider class="dr" >
+        <img  slot="first" src="./assets/images/IMG_1126.JPEG" />
+        <img slot="second" src="./assets/images/IMG_1125.JPEG" />
+  
         </img-comparison-slider>
       </div>
     </div>
 
 
-    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 50px 0px;">
+    <div class="comparison" style="display: flex; flex-direction:row; justify-content: center; align-items: center; margin: 20px 0px;">
       <div style="text-align: center">
-        <img-comparison-slider id="img-comparison-slider2"  class="img-comparison-slider1" style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        <img-comparison-slider  class="gr">
+          <img  slot="first" src="./assets/images/IMG_1128.JPEG" />
+          <img  slot="second" src="./assets/images/IMG_1127.JPEG" />
         </img-comparison-slider>
       </div>
       <div style="text-align: center;">
-        <img-comparison-slider style="width: 88%;">
-          <img width="100%" slot="first" src="./assets/images/5.jpg" />
-          <img width="100%" slot="second" src="./assets/images/4.jpg" />
+        <img-comparison-slider class="dr">
+          <img  slot="first" src="./assets/images/IMG_1122.JPEG" />
+          <img  slot="second" src="./assets/images/IMG_1121.JPEG" />
         </img-comparison-slider>
       </div>
     </div>
     <div id="Content"></div>
   </div>
+
+
+
+
+
+
+
+
+  
 
   <div style="text-align: center; margin-top: -30px;" class="i">
     <span id="rep" class="res" >Відгуки</span>
