--- a/src/app/advantages/advantages.component.html
+++ b/src/app/advantages/advantages.component.html
@@ -53,7 +53,7 @@
     </div>
     <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/Group 3.png" alt=""></div>
+          <div> <img style="width: 300px;" src="./assets/images/Group 3.png" alt=""></div>
           <div class="txt">
             <div class="highlight">СПЕЦІАЛЬНІ ШИРОКІ ДУГИ</div> Pitts Broad, що дозволяють створити широку посмішку за допомогою розширення зубних рядів.
           </div>
@@ -77,7 +77,7 @@
 
       <div style="display: flex; flex-direction: column; margin-bottom: 30px;">
         <div class="advantage" style="display: flex; flex-direction: row; align-items: center; gap: 50px; ">
-          <div> <img src="./assets/images/screen4.png" alt=""></div>
+          <div> <img style="width: 300px;" src="./assets/images/screen4.png" alt=""></div>
           <div class="txt">
             <div class="highlight">ІНДИВІДУАЛЬНЕ РОЗТАШУВАННЯ БРЕКЕТІВ.</div> Модифіковане позиціонування брекетів на зубі, яке ґрунтується не на табличних значеннях, а на індивідуальних параметрах кожного пацієнта, що дозволяє створити так звану «дугу посмішки» (smile arch), що є естетичним еталоном сучасної, привабливої та молодої посмішки.
           </div>
