--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -699,3 +699,54 @@ margin-top: -20px;
 padding-left: 70px;
 padding-right: 70px;
      }
+
+
+
+.gr{
+    margin-right: 20px;
+}
+
+.dr{
+  margin-left: 20px;
+}
+
+.comparison img {
+  width:500px
+}
+
+#ma {
+  margin-bottom: 30px
+}
+     @media screen and (max-width: 1100px) {
+      .comparison{
+      flex-wrap: wrap;
+      }
+
+      #ma {
+        margin-bottom: 20px
+      }
+
+      .gr{
+        margin-right: 0px;
+        margin-bottom: 40px;
+    }
+    
+    .dr{
+      margin-left: 0px;
+    }
+    }
+
+  
+
+    @media screen and (max-width: 800px) {
+      .comparison img {
+        width:360px;
+        height: 230px;
+      }
+    }
+
+    #comp {
+      margin-bottom: 50px;
+    }
+
+  
